# megaAttention

./: .gitignore  .gitmodules  AGENTS.md  CLADUE.md  README.md  STATUS.md  bench.py  bench_triton_gemm_ar.py  causal_varlen_prefill_persistent_fa_oproj_ar_plan_zh.md  compare_gemm_ar.sh  fa4_hopper_kv_stage.md  fa_tile_sm90.py  fa_varlen_sm90.py  fa_ws_sm90.py  fused_fa_oproj_ar_sm90.py  megaattn_oproj_ar_sm90.py  ncu_oproj_ar.sh  oproj_ar_sm90.py  oproj_tile_sm90.py  prof_driver.py  pyproject.toml  reference.py  reference_fused.py  row_desc.py  smoke_persistent.py  test_fa_packed.py  test_fa_tile.py  test_fa_varlen.py  test_fa_ws_sm90.py  test_fused_fa_path.py  test_oproj_tile.py  test_row_desc.py  test_scheduler_skeleton.py  修改方案.md  执行方案.md  设计文稿.md
benchmarks/: bench_fused_fa_oproj_ar.py  bench_oproj_ar.py  sweep_launch_config.py  sweep_log.txt  sweep_results.md
benchmarks/results/: baseline_2barrier_ratio.json  baseline_2barrier_readme.json  exit_clean_1barrier_ratio.json  exit_clean_1barrier_readme.json  exit_clean_vs_baseline.md
docs/design/: causal_varlen_prefill_persistent_fa_oproj_ar_plan_zh.md  deepgemm_megamoe_reference.md  external_references.md  fa4_hopper_kv_stage.md  fa4_hopper_launch_shape_reference.md  fa4_sm90_paged_kv_reference.md  launch_heuristic_role_sg_plan_zh.md  ncu_profiling_fused_kernel_progress_zh.md  oproj_ar修改方案.md  (+1 more)
scratch/: _probe_multiseq.py  _probe_nvlbarrier.py  _probe_param.py  _probe_peerwrite.py  执行方案.md
scripts/: compare_gemm_ar.sh  ncu_oproj_ar.sh  prof_driver.py  prof_fused_driver.py  smoke_persistent.py
(+36 files in other folders)
