[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mega-attention"
version = "0.0.0"
description = "Hopper SM90 causal varlen prefill 融合 FlashAttention + O_proj + NVLS AllReduce 实验项目"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
    "nvidia-cutlass-dsl>=4.5.0",
    "cuda-python",
    "quack-kernels>=0.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "hopper: requires Hopper SM90 GPU",
    "nvls: requires multi-GPU NVLS symmetric memory",
    "distributed: requires torch.distributed launch",
]
